working through css issues with bulma styles not showing up;

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,1 +1,23 @@
+@import 'bulma';
 @import 'navigation';
+
+h1 {
+  font-size: 3.25em;
+}
+
+h2 {
+  font-size: 2.75em;
+}
+
+h3 {
+  font-size: 2.250em;
+}
+
+h4 {
+  font-size: 1.75em;
+}
+
+h5 {
+  font-size: 1.5em;
+}
+
